WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19284
Correct Windows (Cairo) Build Regressions
https://bugs.webkit.org/show_bug.cgi?id=19284
Summary
Correct Windows (Cairo) Build Regressions
Brent Fulgham
Reported
2008-05-27 22:16:12 PDT
This patch corrects the following build regressions: 1. Build regression due to
r31830
(change of GraphicsContextPlatformPrivate::clip signature from IntRect to FloatRect. 2. Correction due to
r32781
(additional use of m_syntheticBoldOffset in GDI handling). 3. Correct _setjmp build errors (warnings now handled as errors). 4. Correct cURL build error (warning now handled as error) due to integral constant overflow.
Attachments
Minor fixes for Cairo build (Windows)
(5.89 KB, patch)
2008-05-27 23:18 PDT
,
Brent Fulgham
alp
: review+
Details
Formatted Diff
Diff
Minor update to patch (using COMPILER(MSVC) guards).
(5.97 KB, patch)
2008-05-28 09:54 PDT
,
Brent Fulgham
alp
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2008-05-27 23:18:31 PDT
Created
attachment 21382
[details]
Minor fixes for Cairo build (Windows)
Alp Toker
Comment 2
2008-05-27 23:39:58 PDT
Comment on
attachment 21382
[details]
Minor fixes for Cairo build (Windows) The compiler-specific checks should be #if COMPILER(MSVC) r=me otherwise.
Brent Fulgham
Comment 3
2008-05-28 09:54:52 PDT
Created
attachment 21391
[details]
Minor update to patch (using COMPILER(MSVC) guards).
Alp Toker
Comment 4
2008-05-29 04:29:26 PDT
Landed in
r34199
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug