WebCore/platform/graphics/SimpleFontData.h
@@ -159,7 +159,7 @@ public:
 
     mutable SimpleFontData* m_smallCapsFontData;
 
-#if PLATFORM(CG)
+#if PLATFORM(CG) || PLATFORM(WIN)
     float m_syntheticBoldOffset;
 #endif
 
