WebCore/platform/image-decoders/jpeg/JPEGImageDecoder.cpp
@@ -42,6 +42,11 @@
 
 #if PLATFORM(CAIRO) || PLATFORM(QT) || PLATFORM(WX)
 
+#if COMPILER(MSVC)
+// Remove warnings from warning level 4.
+#pragma warning(disable : 4611) // warning C4611: interaction between '_setjmp' and C++ object destruction is non-portable
+#endif
+
 extern "C" {
 #include "jpeglib.h"
 }
@@ -101,7 +106,7 @@ public:
         /* Allocate and initialize JPEG decompression object */
         jpeg_create_decompress(&m_info);
   
-        decoder_source_mgr* src;
+        decoder_source_mgr* src = 0;
         if (!m_info.src) {
             src = (decoder_source_mgr*)fastCalloc(sizeof(decoder_source_mgr), 1);
             if (!src) {
