WebCore/platform/network/curl/ResourceHandleManager.cpp
@@ -359,6 +359,11 @@ void ResourceHandleManager::setupPOST(ResourceHandle* job, struct curl_slist** h
     }
 
     // Obtain the total size of the POST
+#if COMPILER(MSVC)
+    // work around compiler error in Visual Studio 2005.  It can't properly
+    // handle math with 64-bit constant declarations.
+#pragma warning(disable: 4307)
+#endif
     static const long long maxCurlOffT = (1LL << (sizeof(curl_off_t) * 8 - 1)) - 1;
     curl_off_t size = 0;
     bool chunkedTransfer = false;
